fix path and baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ collections:
     output: true
   verses:
     output: true
+
+baseurl: "/gita"
+url: "https://harendra-shakya.github.io"
+permalink: /:path/
